Added rudimentary code for loading the scenegraph from a BIN model. It is hardcoded at this point.

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,8 @@ __pycache__/
 *.vcxproj
 *.filters
 SuperLM.sln
+SuperLMTester/ReadMe.txt
+SuperLMTester/SuperLMTester.cpp
+SuperLMTester/stdafx.cpp
+SuperLMTester/stdafx.h
+SuperLMTester/targetver.h
